<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CadastroActivity"
        android:background="@color/cor_padrao">

    <ImageView android:id="@+id/img_cadastro_cadastro"
               android:layout_width="230dp"
               android:layout_height="144dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginEnd="5dp" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"
               android:src="@drawable/cadastro"
               app:layout_constraintVertical_bias="0.053" android:layout_marginTop="5dp"
               android:layout_marginStart="5dp"/>


    <EditText android:id="@+id/ed_nome_cadastro"
              android:layout_width="121dp"
              android:layout_height="@dimen/editText_height"
              android:inputType="textPersonName"
              android:hint="@string/nome"
              app:layout_constraintTop_toBottomOf="@id/img_cadastro_cadastro"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toStartOf="@id/ed_sobrenome_cadastro"
              app:layout_constraintBottom_toBottomOf="parent"
              android:background="@android:color/background_light"
              app:layout_constraintHorizontal_bias="0.9"
              app:layout_constraintVertical_bias="0.092"/>

    <EditText android:id="@+id/ed_sobrenome_cadastro"
              android:layout_width="121dp"
              android:layout_height="@dimen/editText_height"
              android:inputType="textPersonName"
              android:hint="@string/sobrenome"
              app:layout_constraintTop_toBottomOf="@id/img_cadastro_cadastro"
              app:layout_constraintStart_toEndOf="@id/img_cadastro_cadastro"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:background="@android:color/background_light"
              app:layout_constraintHorizontal_bias="2.45"
              app:layout_constraintVertical_bias="0.092"/>

    <EditText android:id="@+id/ed_usuario_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:inputType="text"
              android:hint="@string/usuario"
              app:layout_constraintTop_toBottomOf="@id/ed_nome_cadastro"
              app:layout_constraintStart_toStartOf="@id/ed_nome_cadastro"
              app:layout_constraintEnd_toEndOf="@id/ed_sobrenome_cadastro"
              app:layout_constraintBottom_toTopOf="@id/ed_email_cadastro"
              android:background="@android:color/background_light"
              app:layout_constraintVertical_chainStyle="spread"/>

    <EditText android:id="@+id/ed_email_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:hint="@string/prompt_email"
              android:inputType="textEmailAddress"
              app:layout_constraintTop_toBottomOf="@id/ed_usuario_cadastro"
              app:layout_constraintStart_toStartOf="@id/ed_usuario_cadastro"
              app:layout_constraintEnd_toEndOf="@id/ed_usuario_cadastro"
              app:layout_constraintBottom_toTopOf="@id/ed_celular_cadastro"
              android:background="@android:color/background_light"
              />

    <EditText android:id="@+id/ed_celular_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:inputType="phone"
              android:hint="@string/mascara_num_tel"
              app:layout_constraintTop_toBottomOf="@id/ed_email_cadastro"
              app:layout_constraintStart_toStartOf="@id/ed_email_cadastro"
              app:layout_constraintEnd_toEndOf="@id/ed_email_cadastro"
              app:layout_constraintBottom_toTopOf="@id/ed_senha_cadastro"
              android:background="@android:color/background_light"
              />

    <EditText android:id="@+id/ed_senha_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:hint="@string/senha"
              android:inputType="textPassword"
              app:layout_constraintTop_toBottomOf="@id/ed_celular_cadastro"
              app:layout_constraintStart_toStartOf="@id/ed_celular_cadastro"
              app:layout_constraintEnd_toEndOf="@id/ed_celular_cadastro"
              app:layout_constraintBottom_toTopOf="@id/btn_cadastrar_cadastro"
              android:background="@android:color/background_light"
              />

    <Button android:id="@+id/btn_cadastrar_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            app:layout_constraintTop_toBottomOf="@id/ed_senha_cadastro"
            app:layout_constraintStart_toStartOf="@id/ed_senha_cadastro"
            app:layout_constraintEnd_toEndOf="@id/ed_senha_cadastro"
            app:layout_constraintBottom_toTopOf="parent"
            android:background="@android:color/background_light"
            android:textColor="@color/cor_padrao"
            android:onClick="cadastrarUsuario"
            />



</android.support.constraint.ConstraintLayout>