<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CadastrarLivroActivity"
        android:background="@color/cor_padrao">

    <EditText android:id="@+id/ed_nome_livro_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:inputType="text"
              android:hint="@string/nome"
              android:background="@android:color/background_light"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@id/ed_descricao_livro_cadastro"
    />

    <EditText android:id="@+id/ed_descricao_livro_cadastro"
              android:layout_width="250dp"
              android:layout_height="@dimen/editText_height"
              android:hint="@string/descricao"
              android:inputType="textEmailAddress"
              android:background="@android:color/background_light"
              app:layout_constraintTop_toBottomOf="@id/ed_nome_livro_cadastro"
              app:layout_constraintStart_toStartOf="@id/ed_nome_livro_cadastro"
              app:layout_constraintEnd_toEndOf="@id/ed_nome_livro_cadastro"
              app:layout_constraintBottom_toTopOf="@id/sp_categoria_livro_cadastro"
    />

    <Spinner android:id="@+id/sp_categoria_livro_cadastro"
              android:layout_width="121dp"
              android:layout_height="@dimen/editText_height"
              android:hint="@string/categoria"
             android:background="@android:color/background_light"
             app:layout_constraintTop_toBottomOf="@id/ed_descricao_livro_cadastro"
             app:layout_constraintStart_toStartOf="@id/ed_nome_livro_cadastro"
             app:layout_constraintEnd_toEndOf="@id/ed_nome_livro_cadastro"
             app:layout_constraintBottom_toTopOf="@id/imgbtn_imagem_livro_cadastro"
             android:spinnerMode="dropdown"
    />

    <ImageButton android:id="@+id/imgbtn_imagem_livro_cadastro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Insira sua imagem"
                 android:background="@android:drawable/ic_menu_camera"
                 app:layout_constraintTop_toBottomOf="@id/sp_categoria_livro_cadastro"
                 app:layout_constraintStart_toStartOf="@id/ed_nome_livro_cadastro"
                 app:layout_constraintEnd_toEndOf="@id/ed_nome_livro_cadastro"
                 app:layout_constraintBottom_toTopOf="@id/sp_situacao_livro_cadastro"
                 android:onClick="addImagem"
    />

    <Spinner android:id="@+id/sp_situacao_livro_cadastro"
             android:layout_width="121dp"
             android:layout_height="@dimen/editText_height"
             android:background="@android:color/background_light"
             app:layout_constraintTop_toBottomOf="@id/imgbtn_imagem_livro_cadastro"
             app:layout_constraintStart_toStartOf="@id/ed_nome_livro_cadastro"
             app:layout_constraintEnd_toEndOf="@id/ed_nome_livro_cadastro"
             app:layout_constraintBottom_toTopOf="@id/btn_cadastrar_livro_cadastro"
             android:contentDescription="@string/situacao"
             android:spinnerMode="dropdown"
    />

    <Button android:id="@+id/btn_cadastrar_livro_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            app:layout_constraintTop_toBottomOf="@id/sp_situacao_livro_cadastro"
            app:layout_constraintStart_toStartOf="@id/ed_nome_livro_cadastro"
            app:layout_constraintEnd_toEndOf="@id/ed_nome_livro_cadastro"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/background_light"
            android:textColor="@color/cor_padrao"
            android:onClick="cadastrarLivro"
    />

</android.support.constraint.ConstraintLayout>