<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/cor_padrao">

    <ImageView android:id="@+id/img_logo_login"
               android:layout_width="260dp"
               android:layout_height="200dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginEnd="5dp" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"
               android:src="@drawable/logos"
               app:layout_constraintVertical_bias="0.03" android:layout_marginTop="5dp"
               android:layout_marginStart="5dp"/>

    <EditText android:id="@+id/ed_usuario_login"
              android:layout_width="250dp" android:layout_height="@dimen/editText_height"
              app:layout_constraintTop_toBottomOf="@id/img_logo_login"
              app:layout_constraintStart_toStartOf="@id/img_logo_login"
              app:layout_constraintEnd_toEndOf="@id/img_logo_login"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/usuario"
              app:layout_constraintVertical_bias="0.051"
              android:inputType="text"
              android:background="@android:color/background_light"/>

    <EditText android:id="@+id/ed_senha_login"
              android:layout_width="250dp" android:layout_height="@dimen/editText_height"
              app:layout_constraintTop_toBottomOf="@id/ed_usuario_login"
              app:layout_constraintStart_toStartOf="@id/ed_usuario_login"
              app:layout_constraintEnd_toEndOf="@id/ed_usuario_login"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/senha"
              app:layout_constraintHorizontal_bias="1.0"
              app:layout_constraintVertical_bias="0.11"
              android:inputType="textPassword"
              android:background="@android:color/background_light"/>

    <Button android:id="@+id/btn_entrar_login"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textColor="@color/cor_padrao"
            android:background="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@id/ed_senha_login"
            app:layout_constraintStart_toStartOf="@id/ed_usuario_login"
            app:layout_constraintEnd_toEndOf="@id/ed_usuario_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"/>

    <Button android:id="@+id/btn_cadastrar_login"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textColor="@android:color/background_light"
            android:background="@color/cor_padrao"
            app:layout_constraintTop_toBottomOf="@id/btn_entrar_login"
            app:layout_constraintStart_toStartOf="@id/ed_usuario_login"
            app:layout_constraintEnd_toEndOf="@id/ed_usuario_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:drawablePadding="10dp"/>

</android.support.constraint.ConstraintLayout>